bookface_light.css
/* ... */
		#search-save:hover,
		#search-save:focus {
			box-shadow: inset 0 0 100px rgba(0,0,0,.1) !important;
		}
	#search-save .fa-plus::before{
		content: '\f292' !important;
	}
	#search-save .fa-floppy-o::before {
		content: '\f00e' !important;
	}
	#search-save .fa-floppy-o::before,
	#search-save .fa-plus::before {
		display: inline-block;
		margin-top: 2px;
	}
	#search-save .fa-floppy-o::after,
	#search-save .fa-plus::after{
		content: var(--save-search-text);
		font-family: 'Open Sans', Arial, sans-serif;
		font-size: 15px;
		float: left;
		margin-right: 10px;
		line-height: 32px;
		position: relative;
		display: block;
		top: -2px;
		font-weight: 700;
	}
	#search-save .fa-floppy-o::after {
		  content: var(--save-search-text);
	}
	#search-save .fa-plus::before {
		display: inline-block;
		margin-top: 2px;
	}
	#search-save .fa-plus::after {
		  content: var(--follow-tag-text);
	}
	/* popovers */
	.popover.hovercard {
		border: 1px solid var(--nav-bg) !important;
		/* 	
			dark version needs box shadow as outer glow
		*/
	}
	.hover-card-footer {
		border-color: #ccc;
		background-color: var(--nav-bg);
	}
		.hovercard.top > .arrow::after {
			border-top-color: var(--nav-bg);
		}
		.hovercard.right > .arrow::after {
			border-right-color: var(--nav-bg);
		}
		.hovercard.bottom > .arrow::after {
			border-bottom-color: var(--nav-bg);
		}
		.hovercard.left > .arrow::after {
			border-left-color: var(--nav-bg);
		}
	/* sidebar widgets */
	aside .widget,
	.nav-container .widget {
		background-color: var(--background-color) !important;
		-webkit-box-shadow: none !important;
		-moz-box-shadow: none !important;
		box-shadow: none !important;
	}
	aside .badge {
		background-color: var(--link-color);
	}
	/* POSTS */
	.tread-wrapper {
	  /* frio background-color */
	  box-shadow: 0 0px 1px rgba(0,0,0,.5) !important;
	  border-radius: 10px !important;
	}
	.wall-item-container {
		border-top: none;
	}
	.wall-item-container .media {
		background-color: #ffffff !important;
		border-radius: 10px !important;
	}
	.wall-item-container iframe {
		width: 100% !important;
		height: auto !important;
		display: block;
		margin: 0 auto;
		aspect-ratio: 16/9;
		border: 1px solid #ccc;
		border-radius: 8px;
		background-color: #000;
	}
	/*
		Dark mode has some extra styling
		here light mode does not need
	*/
		.contact-photo,
		.contact-photo-xs {
			border-radius: 100% !important;
			border: 1px solid #eee !important;
		}
	/*
		Dark mode has some extra styling
		here light mode does not need
		to the .media-list > li elements
	*/
/*	
	Dark mode has some extra styling
	here for the .hovercard element
*/
		.hover-card-pic img.thumbnail {
			border-radius: 100% !important;
			/* frio background-color */
			/* frio border-color */
		}
		p.wall-item-announce,
		.media .time, .media .shared-time,
		.media .delivery, .media .location,
		.media .location a {
			font-size: 13px !important;
		}
			.type-link, .type-video {
				padding: 0 !important;
				margin:  0 !important;
				background-color: rgb(240, 242, 245) !important;
				border: 1px solid rgb(208,211,215) !important;
			}
			.type-link h4, .type-link blockquote, .type-link sup,
			.type-video h4, .type-video blockquote, .type-video sup {
				padding-left: 10px !important;
				padding-right: 10px !important;
			}
       /* keep mentions and tags from spilling out */
       #profile-page .label,
       #profile-page .label a,
       .wall-item-bottom .label, 
       .wall-item-bottom .label a {
            display: inline-block !important;
       }
		/* ACTION BUTTON LABELS */
		.wall-item-actions-row button,
		.wall-item-actions-right button {
		    position: relative;
			display: block;
			white-space: normal !important;
			margin: 0 auto !important;
			/* frio -webkit-box-shadow */
			/* frio box-shadow */
		}
		.wall-item-actions-row button::after,
		.wall-item-actions-right button::after {
			font-size: 14px;
			font-family: sans-serif;
			display: block;
			margin-top: 2px;
		}
		.wall-item-response {
		    position: relative;
			overflow: visible !important;
			display: block;
		}
		.button-comments::after {
			content: var(--comment-button-text);
		}
		.button-announces::after {
			content: var(--share-button-text);
		}
			.share-links .dropdown-toggle::after {
				content: var(--share-button-text);
			}
		.button-votes::after {
			content: var(--quote-button-text);
		}
		.button-likes::after {
			content: var(--like-button-text);
		}
	 	[id^="dislike-"]::after{
		 	content: var(--dislike-button-text);
	 	}
		.wall-item-actions-right .dropdown-toggle::after,
		.more-links .dropdown-toggle::after {
			content: var(--more-button-text);
		}
		/* engagement counts */
		.wall-item-actions-row > button span,
		.wall-item-response span {
			position: absolute;
			text-align: center;
			display: block;
			background-color: var(--count-bg);
			box-shadow: -1px 1px 1px #fff;
			border-radius: 4px;
			color: var(--count-color);
			font-size: 12px;
			font-weight: 700;
			width: fit-content;
			padding: 0px 7px;
			left: 55%;
			top: 0px;
			z-index: 1;
		}
		/* Event Response Buttons */
		.vote-event:has(button) {
			padding-bottom: 135px;
		}
		.vote-event:has(button) .wall-item-response {
			position: absolute;
			top: 63px;
		}
		.vote-event .wall-item-response:empty{
			display: none;
		}
		.vote-event:has(button) .wall-item-response:nth-of-type(1){
			left: 15px;
		}
		.vote-event .wall-item-response:nth-of-type(1) .button-event::after,
		[id^="attendyes"]::after{
			content: var(--attendyes-button-text);
		}
		.vote-event:has(button) .wall-item-response:nth-of-type(2){
			left: 105px;
		}
		.vote-event .wall-item-response:nth-of-type(2) .button-event::after,
		[id^="attendno"]::after{
			content: var(--attendno-button-text);
			position: relative;
			height: 20px;
			overflow: hidden; /* or skews mobile button layout */
		}
		.vote-event:has(button) .wall-item-response:nth-of-type(3){
			left: 204px;
		}
/* ... */

